# hello-word

./: .clang-format  CMakeLists.txt  README.md
LearnOpenGL/: CMakeLists.txt  glTransfer.py
LearnOpenGL/include/Shader/: IShader.h  Shader.h  ShaderTriangle.h
LearnOpenGL/include/camera/: camera.h
LearnOpenGL/include/glad/: glad.h
LearnOpenGL/include/light/: light.h
LearnOpenGL/include/tex/: tex.h
LearnOpenGL/include/transform/: cord_system.h  glm_demo.h  gltransform.h
LearnOpenGL/include/triangle/: Triangle.h  Triangle2.h  TriangleEBO.h  TriangleExercise2.h  TriangleExercise3.h
LearnOpenGL/lib/win/: glfw3.lib
LearnOpenGL/os/: proc.cpp  proc.h
LearnOpenGL/res/: cord.fs  cord.vs  light.fs  light_cubic.fs  light_cubic.vs  light_src.fs  light_src.vs
LearnOpenGL/src/: basic_main.cpp  glad.c  light_main.cpp  main.cpp
LearnOpenGL/src/Shader/: Shader.cpp  ShaderTriangle.cpp
LearnOpenGL/src/camera/: camera.cpp
LearnOpenGL/src/light/: light.cpp
LearnOpenGL/src/tex/: tex.cpp
LearnOpenGL/src/transform/: cord_system.cpp  glm_demo.cpp  gltransform.cpp
LearnOpenGL/src/triangle/: Triangle.cpp  Triangle2.cpp  TriangleEBO.cpp  TriangleExercise2.cpp  TriangleExercise3.cpp
LearnOpenGL/test/: test_os.cpp
LearnOpenGL/utils/: utils.cpp  utils.h
